kubernetes/infrastructure/prod/headlamp/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_HEADLAMP}.${DOMAIN}"
    gethomepage.dev/description: user-friendly Kubernetes UI focused
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/name: Headlamp
    gethomepage.dev/app: headlamp 
spec:
  entryPoints:
    - websecure
  tls:
    secretName: headlamp.${DOMAIN}
  routes:
    - kind: Rule
      match: Host(`${HOST_HEADLAMP}.${DOMAIN}`)
      services:
        - kind: Service
          name: headlamp
          namespace: kube-system
          port: 80
